# CodigoTesis

./: .gitignore  README.md  eval_correlax.py  findclf_image.py  pyproject.toml  pyproject.toml.cuda  pyproject.toml.xpu
src/correlax/: Algorithm.py  ImageIO.py
src/findclf/: Defaults.py  ImageIO.py  ModelOps.py  Transforms.py  WindowOps.py
tests/: test_detector.py  test_images.py  test_pytorch.py
unmaintained/: 01-ModelSelection.ipynb  02-GridSearch.ipynb  03-ClassifierTrain.ipynb  04-ClassifierMetrics.ipynb  06C-PointingGameEval.ipynb  Corrmedia.ipynb  README.md
