[project]
name = "codigotesis"
version = "0.1.0"
description = "Codigo desarrollado dentro del marco de mi tesis doctoral"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.5",
    "opencv-python>=4.11.0.86",
    "pydicom>=3.0.1",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "pytorch-triton-xpu>=3.3.0",
    "pandas>=2.3.3",
    "matplotlib>=3.10.7",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-xpu" }, 
]
torchvision = [
    { index = "pytorch-xpu" }, 
]
pytorch-triton-xpu = [
    { index = "pytorch-xpu" }, 
]

[[tool.uv.index]]
name = "pytorch-xpu"
url = "https://download.pytorch.org/whl/xpu"
explicit = true

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ruff>=0.14.6",
]
